fix cross image size and overflow

--- a/_sass/modules/home-splash.sass
+++ b/_sass/modules/home-splash.sass
@@ -4,6 +4,7 @@
   // FIX: fix this 
   width: 100%
   //min-height: 800px
+  overflow: scroll // fix overflow from cross image
   
   img.homesplashimg
     margin: 0 auto
